--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_ENGINE=django.db.backends.postgresql
-DB_DATABASE=d-detector
+DB_DATABASE=sign_detector
 DB_USERNAME=postgres
 DB_PASSWORD=123
 DB_SOCKET=localhost
